Finito software birdview e curve senza rappresentazione

--- a/Camera_calibration.ipynb
+++ b/Camera_calibration.ipynb
@@ -92,9 +92,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Prog1",
+   "display_name": "Python Ai env",
    "language": "python",
-   "name": "prog1"
+   "name": "other-env"
   },
   "language_info": {
    "codemirror_mode": {
