--- a/prova.ipynb
+++ b/prova.ipynb
@@ -14,7 +14,8 @@
     "\n",
     "from Curves import curves\n",
     "from LaneFilter import LaneFilter \n",
-    "from BirdView import BirdView\n"
+    "from BirdView import BirdView\n",
+    "from FPS import FPS\n"
    ]
   },
   {
@@ -222,45 +223,67 @@
    "execution_count": 4,
    "id": "fc942324-0b19-4634-af11-3f75f90142f7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.189784\n",
+      "1.7348531378515872\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'z = np.zeros_like(filtered)\\nfiltered = np.dstack((z,z,z))\\nkl, kr = result[\\'pixel_left_best_fit_curve\\'], result[\\'pixel_right_best_fit_curve\\']\\nh = filtered.shape[0]\\nys = np.linspace(0, h -1, h)\\nlxs = kl[0] * (ys**2) + kl[1] * ys + kl[2]\\nrxs = kr[0] * (ys**2) + kr[1] * ys + kr[2]\\n#creiamo un array verticale che contine i punti x e y della curva\\npts_left = np.array([np.transpose(np.vstack([lxs,ys]))])\\n#qua uso transpose perche si inverte l\\'ordine dei punti e si può fare una bella area\\npts_right = np.array([np.flipud(np.transpose(np.vstack([rxs,ys])))])\\n#creiamo un array orizzontale dei 2 punti delle curve\\npts = np.hstack((pts_left, pts_right))\\n#riempiamo lo spazio tra i punti\\ncv2.fillPoly(filtered, np.int_(pts), (0, 255,0))\\nshape = (filtered.shape[1], filtered.shape[0])\\n#faccio l\\'inversa della maschera per rimetterla sull\\'immagine originale\\nground_lane = cv2.warpPerspective(filtered, birdview.inv_sky_matrix, shape)\\ncombo = cv2.addWeighted(undistort,1,ground_lane, 0.3, 0)\\ncv2.imshow(\"Line image\", combo)\\nkey = cv2.waitKey(1) & 0xFF\\nif cv2.waitKey(10) & 0xFF == ord(\\'q\\'):\\n    cap.release()\\n    cv2.destroyAllWindows()\\n    break\\n'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "cap = cv2.VideoCapture(\"test2.mp4\")\n",
+    "fps = FPS()\n",
+    "image = cv2.imread('test_image.png')\n",
+    "lane_image = np.copy(image)\n",
     "lanefilter = LaneFilter()\n",
     "curves = curves(9, 100, 50)\n",
-    "while cap.isOpened():\n",
-    "    _, frame = cap.read()\n",
-    "    image = np.array(frame)\n",
-    "    filtered = lanefilter.toCanny(image)\n",
-    "    filtered = lanefilter.ROI(filtered)\n",
-    "    skyview = birdview.sky_view(filtered)\n",
-    "    undistort = birdview.undistort(image)\n",
-    "    result = curves.Detect(skyview)\n",
-    "    z = np.zeros_like(filtered)\n",
-    "    filtered = np.dstack((z,z,z))\n",
-    "    kl, kr = result['pixel_left_best_fit_curve'], result['pixel_right_best_fit_curve']\n",
-    "    h = filtered.shape[0]\n",
-    "    ys = np.linspace(0, h -1, h)\n",
-    "    lxs = kl[0] * (ys**2) + kl[1] * ys + kl[2]\n",
-    "    rxs = kr[0] * (ys**2) + kr[1] * ys + kr[2]\n",
-    "    #creiamo un array verticale che contine i punti x e y della curva\n",
-    "    pts_left = np.array([np.transpose(np.vstack([lxs,ys]))])\n",
-    "    #qua uso transpose perche si inverte l'ordine dei punti e si può fare una bella area\n",
-    "    pts_right = np.array([np.flipud(np.transpose(np.vstack([rxs,ys])))])\n",
-    "    #creiamo un array orizzontale dei 2 punti delle curve\n",
-    "    pts = np.hstack((pts_left, pts_right))\n",
-    "    #riempiamo lo spazio tra i punti\n",
-    "    cv2.fillPoly(filtered, np.int_(pts), (0, 255,0))\n",
-    "    shape = (filtered.shape[1], filtered.shape[0])\n",
-    "    #faccio l'inversa della maschera per rimetterla sull'immagine originale\n",
-    "    ground_lane = cv2.warpPerspective(filtered, birdview.inv_sky_matrix, shape)\n",
-    "    combo = cv2.addWeighted(undistort,1,ground_lane, 0.3, 0)\n",
-    "    cv2.imshow(\"Line image\", combo)\n",
-    "    key = cv2.waitKey(1) & 0xFF\n",
-    "    if cv2.waitKey(10) & 0xFF == ord('q'):\n",
-    "        cap.release()\n",
-    "        cv2.destroyAllWindows()\n",
-    "        break\n",
-    "    "
+    "fps.start()\n",
+    "filtered = lanefilter.toCanny(lane_image)\n",
+    "filtered = lanefilter.ROI(filtered)\n",
+    "skyview = birdview.sky_view(filtered)\n",
+    "undistort = birdview.undistort(lane_image)\n",
+    "result = curves.Detect(skyview)\n",
+    "fps.stop()\n",
+    "print(fps.time())\n",
+    "print(result['Center_distance'])\n",
+    "'''z = np.zeros_like(filtered)\n",
+    "filtered = np.dstack((z,z,z))\n",
+    "kl, kr = result['pixel_left_best_fit_curve'], result['pixel_right_best_fit_curve']\n",
+    "h = filtered.shape[0]\n",
+    "ys = np.linspace(0, h -1, h)\n",
+    "lxs = kl[0] * (ys**2) + kl[1] * ys + kl[2]\n",
+    "rxs = kr[0] * (ys**2) + kr[1] * ys + kr[2]\n",
+    "#creiamo un array verticale che contine i punti x e y della curva\n",
+    "pts_left = np.array([np.transpose(np.vstack([lxs,ys]))])\n",
+    "#qua uso transpose perche si inverte l'ordine dei punti e si può fare una bella area\n",
+    "pts_right = np.array([np.flipud(np.transpose(np.vstack([rxs,ys])))])\n",
+    "#creiamo un array orizzontale dei 2 punti delle curve\n",
+    "pts = np.hstack((pts_left, pts_right))\n",
+    "#riempiamo lo spazio tra i punti\n",
+    "cv2.fillPoly(filtered, np.int_(pts), (0, 255,0))\n",
+    "shape = (filtered.shape[1], filtered.shape[0])\n",
+    "#faccio l'inversa della maschera per rimetterla sull'immagine originale\n",
+    "ground_lane = cv2.warpPerspective(filtered, birdview.inv_sky_matrix, shape)\n",
+    "combo = cv2.addWeighted(undistort,1,ground_lane, 0.3, 0)\n",
+    "cv2.imshow(\"Line image\", combo)\n",
+    "key = cv2.waitKey(1) & 0xFF\n",
+    "if cv2.waitKey(10) & 0xFF == ord('q'):\n",
+    "    cap.release()\n",
+    "    cv2.destroyAllWindows()\n",
+    "    break\n",
+    "'''"
    ]
   },
   {
