--- a/Camera_calibration.ipynb
+++ b/Camera_calibration.ipynb
@@ -47,11 +47,11 @@
    "source": [
     "chessboards = []\n",
     "\n",
-    "cam = cv2.VideoCapture(0)\n",
+    "cap = cv2.VideoCapture(0)\n",
     "time.sleep(5)\n",
     "for n in range (14):\n",
     "    print('collecting image {}'.format(n))\n",
-    "    ret, frame = cam.read()\n",
+    "    ret, frame = cap.read()\n",
     "    cv2.imshow('img',frame)\n",
     "    path = 'calibration' + str(n+1) + '.jpg'\n",
     "    cv2.imwrite(path,frame)\n",
